<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.colerobinette.smartfolio.Balance">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/titleMenu"
        android:paddingLeft="20dp"
        android:paddingRight="16dp"
        android:background="#673AB7">

        <ImageView
            android:id="@+id/titlebar_logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher"
            android:clickable="false"
            android:layout_alignParentLeft="true"
            android:paddingRight="12dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:id="@+id/title"
            android:textSize="20sp"
            android:gravity="left|center_vertical"
            android:textColor="@color/text_header"
            android:layout_toEndOf="@+id/titlebar_logo"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/pieButton"
            android:src="@drawable/ic_pie"
            android:clickable="true"
            android:onClick="CallPieChart"
            android:layout_alignBottom="@+id/title"
            android:contentDescription="@string/newCoin"
            android:layout_toStartOf="@+id/addButton"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/addButton"
            android:src="@drawable/add"
            android:clickable="true"
            android:onClick="OpenCoinInputBox"
            android:layout_alignBottom="@+id/title"
            android:contentDescription="@string/newCoin"
            android:layout_toStartOf="@+id/refreshButton"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/refreshButton"
            android:src="@drawable/refresh"
            android:clickable="true"
            android:onClick="Refresh"
            android:layout_alignBottom="@+id/title"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/refresh"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/titleMenu"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:id="@+id/portfolioDisplay">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/portfolioValue"
            android:onClick="OpenCurrencyBox">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_balance"
                android:textStyle="bold"
                android:textSize="12sp"
                android:gravity="center_vertical"
                android:textColor="#666666"
                android:layout_alignParentStart="false"
                android:id="@+id/portfolioValueTitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollarsign"
                android:id="@+id/smallDollarSign"
                android:textStyle="bold"
                android:gravity="left|center_vertical"
                android:paddingRight="0dp"
                android:paddingLeft="0dp"
                android:textSize="20sp"
                android:textColor="@color/text_primary"
                android:layout_below="@+id/portfolioValueTitle"
                android:paddingTop="9dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/loading_message"
                android:id="@+id/valueTotal"
                android:gravity="top|left"
                android:textSize="38sp"
                android:textColor="@color/text_primary"
                android:layout_below="@+id/portfolioValueTitle"
                android:layout_toEndOf="@+id/smallDollarSign"
                android:paddingLeft="3dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/portfolioChange"
            android:layout_toEndOf="@+id/portfolioValue"
            android:onClick="ChangeTimeFrame">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change24hr"
                android:textStyle="bold"
                android:textSize="12sp"
                android:gravity="center_vertical"
                android:textColor="#666666"
                android:layout_alignParentStart="false"
                android:id="@+id/changeTitle"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading_message"
                android:id="@+id/change"
                android:textStyle="bold"
                android:gravity="left|center_vertical"
                android:textSize="20sp"
                android:textColor="@color/text_primary"
                android:layout_below="@+id/changeTitle"
                android:paddingTop="5dp"
                android:layout_toStartOf="@+id/portfolioChangeArrow" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:id="@+id/portfolioChangeArrow"
                android:src="@drawable/arrow_green"
                android:layout_below="@+id/changeTitle"
                android:layout_alignBottom="@+id/change"
                android:layout_alignParentEnd="true"
                android:paddingTop="5dp"
                android:layout_marginLeft="3dp" />
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/columnHeaders"
        android:layout_below="@+id/portfolioDisplay"
        android:background="#7E57C2">

        <TextView
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:text="Coin↑"
            android:id="@+id/sortCoinButton"
            android:gravity="center_vertical|right"
            android:layout_weight=".1"
            android:textColor="@color/text_header"
            android:textSize="15sp"
            android:onClick="SortByCoin"
            android:paddingLeft="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Holdings↓"
            android:id="@+id/sortHoldingsButton"
            android:gravity="center_vertical|right"
            android:layout_weight=".45"
            android:textColor="@color/text_header"
            android:textSize="15sp"
            android:onClick="SortByHoldings"
            android:layout_toEndOf="@+id/sortCoinButton"
            android:layout_toStartOf="@+id/sortPriceButton"
            />

        <TextView
            android:layout_width="185dp"
            android:layout_height="match_parent"
            android:text="Price↓"
            android:id="@+id/sortPriceButton"
            android:gravity="center_vertical|right"
            android:layout_weight=".45"
            android:textColor="@color/text_header"
            android:textSize="15sp"
            android:onClick="SortByPrice"
            android:paddingRight="25dp"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>


    <ListView
        android:id="@+id/balancesList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/columnHeaders"
        android:divider="#cccccc"
        android:dividerHeight="0dp"
        android:drawSelectorOnTop="false"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8f7f7f7f"
        android:visibility="gone"
        android:id="@+id/greyOverlay"></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:id="@+id/setCurrencyBox"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/setCurrencyTitle"
            android:padding="10dp"
            android:background="@color/primary"
            android:textColor="#ffffff"
            android:text="@string/enter_currency" />

        <com.colerobinette.smartfolio.BalanceEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/currencyInput"
            android:maxLines="1"
            android:gravity="center_vertical|right"
            android:textSize="40sp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:imeOptions="actionDone"
            android:textColor="@color/text_primary"
            android:layout_below="@+id/setCurrencyTitle"
            android:inputType="textNoSuggestions|textCapCharacters" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:id="@+id/newCoinBox"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/AddCoinTitle"
            android:padding="10dp"
            android:background="@color/primary"
            android:textColor="#ffffff"
            android:text="@string/enterCoinSymbol" />

        <com.colerobinette.smartfolio.BalanceEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/coinInput"
            android:maxLines="1"
            android:gravity="center_vertical|right"
            android:textSize="40sp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:imeOptions="actionDone"
            android:textColor="@color/text_primary"
            android:layout_below="@+id/AddCoinTitle"
            android:inputType="textNoSuggestions|textCapCharacters" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:id="@+id/editBalanceBox"
        android:background="@color/primary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/editTitle"
            android:padding="10dp"
            android:textColor="#ffffff" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:id="@+id/deleteButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/trash"
            android:layout_above="@+id/balanceInput"
            android:onClick="DeleteSelected"
            android:contentDescription="@string/delete"
            android:layout_marginRight="16dp" />

        <com.colerobinette.smartfolio.BalanceEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/balanceInput"
            android:maxLines="1"
            android:inputType="numberSigned|numberDecimal"
            android:layout_below="@+id/editTitle"
            android:gravity="center_vertical|right"
            android:textSize="40sp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:imeOptions="actionDone"
            android:textColor="@color/text_primary"
            android:background="#ffffff" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="80dp"
        android:paddingBottom="80dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_below="@+id/columnHeaders"
        android:visibility="gone"
        android:id="@+id/coinSelector">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="Which BAT?"
            android:id="@+id/chooseCoinTitle"
            android:gravity="center_vertical"
            android:layout_weight=".1"
            android:textColor="@color/text_header"
            android:textSize="15sp"
            android:paddingLeft="15dp"
            android:background="@color/primary" />

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="#cccccc"
            android:dividerHeight="0dp"
            android:id="@+id/collidingCoins"
            android:background="#ffffff"
            android:layout_below="@+id/chooseCoinTitle"
            />

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="#673AB7"
        android:layout_marginTop="0dp"
        android:orientation="vertical">


        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/portfoliobutton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="Portfoliofunction"
                android:layout_weight="1"
                android:text="Portfolio"
                android:background="#673AB7"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/wishlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="Wishlistfunction"
                android:text="Wishlist"
                android:layout_weight="1"
                android:background="#673AB7"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/marketbutton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="Marketfunction"
                android:text="Market"
                android:layout_weight="1"
                android:background="#673AB7"
                android:textColor="#FFFFFF"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>